--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -107,17 +107,33 @@
             android:textSize="@dimen/_13ssp"
             android:textColor="@color/primary_text"
             />
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonSignUp"
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_50sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:textSize="@dimen/_13ssp"
-            android:textColor="@color/white"
-            android:text="@string/register"
-            android:textStyle="bold"
-            app:cornerRadius="@dimen/_8sdp"
-            />
+            android:layout_height="wrap_content"
+            android:animateLayoutChanges="true">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/buttonSignUp"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:textSize="@dimen/_13ssp"
+                android:textColor="@color/white"
+                android:text="@string/register"
+                android:textStyle="bold"
+                app:cornerRadius="@dimen/_8sdp"
+                />
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_gravity="center"
+                android:visibility="invisible"
+                android:layout_height="@dimen/_25sdp"/>
+
+
+        </FrameLayout>
+
         <TextView
             android:id="@+id/textSignUp"
             android:layout_width="wrap_content"
