--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -62,17 +62,33 @@
             android:textSize="@dimen/_13ssp"
             android:textColor="@color/primary_text"
             />
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonSignIn"
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_50sdp"
             android:layout_marginTop="@dimen/_20sdp"
-            android:textSize="@dimen/_13ssp"
-            android:textColor="@color/white"
-            android:text="@string/sign_in"
-            android:textStyle="bold"
-            app:cornerRadius="@dimen/_8sdp"
-            />
+            android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
+            >
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/buttonSignIn"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50sdp"
+                android:textSize="@dimen/_13ssp"
+                android:textColor="@color/white"
+                android:text="@string/sign_in"
+                android:textStyle="bold"
+                app:cornerRadius="@dimen/_8sdp"
+                />
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:visibility="invisible"
+                android:layout_gravity="center"/>
+
+
+        </FrameLayout>
+
         <TextView
             android:id="@+id/textCreateNewAccount"
             android:layout_width="wrap_content"
