--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -49,7 +49,7 @@
             android:clipToPadding="false"
             android:overScrollMode="never"
             android:padding="@dimen/_20sdp"
-            android:visibility="gone"
+            android:visibility="invisible"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             />
