--- a/app/src/main/res/layout/item_conteniner_received_message.xml
+++ b/app/src/main/res/layout/item_conteniner_received_message.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/_8sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
    <com.makeramen.roundedimageview.RoundedImageView
@@ -21,6 +22,11 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="@dimen/_13ssp"
+        android:paddingEnd="@dimen/_12sdp"
+        android:paddingStart="@dimen/_12sdp"
+        android:paddingBottom="@dimen/_8sdp"
+        android:paddingTop="@dimen/_8sdp"
+        app:layout_constraintWidth_max="wrap"
         android:background="@drawable/background_received_message"
         app:layout_constraintStart_toEndOf="@id/imageProfile"
         app:layout_constraintTop_toTopOf="parent"
